--- a/src/index.html
+++ b/src/index.html
@@ -15,14 +15,5 @@
         <script src="./bundle.js" type="module"></script>
     </head>
 
-    <body>
-        <main>
-            <div class="mui-container-fluid">
-                <div class="mui-row">
-                    <div id="screen" class="mui-col-md-6"></div>
-                    <div id="root" class="mui-col-md-6"></div>
-                </div>
-            </div>
-        </main>
-    </body>
+    <body></body>
 </html>
